Fix dual-column alignment

--- a/static/less/style.less
+++ b/static/less/style.less
@@ -65,7 +65,7 @@ a {
 }
 
 .container { 
-	.navbar-default {
+	.navbar {
 		background-color: @block;
 		border: 1px solid @border;
 		border-radius: 4px;
@@ -135,7 +135,9 @@ a {
 }
 
 .post-image {
+	border: 1px solid @border;
 	border-radius: 4px 4px 0 0;
+	border-bottom: none;
 	overflow: hidden;
 	img {
 		display: block;
@@ -147,9 +149,9 @@ a {
 }
 
 .post {
-	font-size: 16px;
 	background-color: @block;
 	border: 1px solid @border;
+	border-top: none;
 	border-radius: 0 0 4px 4px;
 	padding: 15px;
 	margin: 0 0 30px 0;
@@ -165,6 +167,14 @@ a {
 	&-content {
 		margin: 15px 0 15px 0;
 		font-family: @serif;
+	}
+	&-mini {
+		font-size: 16px;
+		line-height: 1.375;
+	}
+	&-full {
+		font-size: 18px;
+		line-height: 1.444;
 	}
 	img {
 		display: block;
